--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "certchain"
 version = "0.1.0"
 authors = ["Matt Quinn <matt@mattjquinn.com>"]
 
+[lib]
+name = "certchain"
+path = "src/lib.rs"
+
 [dependencies]
 hyper = "0.6.1"
 rust-crypto = "*"
 rustc-serialize = "0.3.15"
 getopts = "0.2"
+log = "0.3.1"
+log4rs = "0.3.3"
