Nodes can now connect to each other via TCP sockets.

--- a/nodeA.conf
+++ b/nodeA.conf
@@ -1,7 +1,9 @@
 # Node A's configuration.
 
 listener_port = 4000
+rpc_port = 4001
 
 [[peers]]
+name = "Stanford University"
 hostname = "127.0.0.1"
 port = 5000
