--- a/nodeB.conf
+++ b/nodeB.conf
@@ -1,7 +1,9 @@
 # Node B's configuration.
 
 listener_port = 5000
+rpc_port = 5001
 
 [[peers]]
+name = "Virginia Tech"
 hostname = "127.0.0.1"
 port = 4000
