--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ rust-base58 = "0.0.4"
 # eventually use the crates version.
 [dependencies.secp256k1]
 git = "https://github.com/apoelstra/rust-secp256k1"
+rev = "5602d6f98843d19de500d43d3556961579d59494"
