Adding configuration for Virginia's node, peering Virginia with Ireland and Tokyo.

--- a/ireland.conf
+++ b/ireland.conf
@@ -12,3 +12,8 @@ compressed_public_key = "029c5d75c6f1c5ad9c7a8156cac46a527634030dc607a4d3e3a2600
 name = "Tokyo University"
 hostname = "tokyo.certchain.org"
 port = 4000
+
+[[peers]]
+name = "University of Virginia"
+hostname = "virginia.certchain.org"
+port = 4000
