--- a/tokyo.conf
+++ b/tokyo.conf
@@ -13,3 +13,9 @@ compressed_public_key = "03bc0dc96bb6e98f8a3e91a2bff4cdd028e801660b7153cfff63ec8
 name = "University of Ireland"
 hostname = "ireland.certchain.org"
 port = 4000
+
+[[peers]]
+name = "University of Virginia"
+hostname = "virginia.certchain.org"
+port = 4000
+
