Adding configuration for Stanford's node, peering with the other three nodes.

--- a/ireland.conf
+++ b/ireland.conf
@@ -17,3 +17,8 @@ port = 4000
 name = "University of Virginia"
 hostname = "virginia.certchain.org"
 port = 4000
+
+[[peers]]
+name = "Stanford University"
+hostname = "stanford.certchain.org"
+port = 4000
