--- a/virginia.conf
+++ b/virginia.conf
@@ -18,3 +18,7 @@ name = "University of Ireland"
 hostname = "ireland.certchain.org"
 port = 4000
 
+[[peers]]
+name = "Stanford University"
+hostname = "stanford.certchain.org"
+port = 4000
