--- a/tokyo.conf
+++ b/tokyo.conf
@@ -19,3 +19,7 @@ name = "University of Virginia"
 hostname = "virginia.certchain.org"
 port = 4000
 
+[[peers]]
+name = "Stanford University"
+hostname = "stanford.certchain.org"
+port = 4000
