--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,10 @@ rustc-serialize = "0.3.15"
 getopts = "0.2"
 log = "0.3.1"
 log4rs = "0.3.3"
-toml = "0.1.22"
+toml = "0.1.23"
 byteorder = "0.3.13"
 rand = "0.3.9"
 rust-base58 = "0.0.4"
 time = "0.1.32"
-
-# As of this writing (09/11/2015), the rust-secp256k1
-# version in crates is not up-to-date with the author's
-# repo, which has changes that integrate recent API
-# changes made to the underlying/wrapped secp256k1
-# C++ library. Building from the repo for now,
-# eventually use the crates version.
-[dependencies.secp256k1]
-git = "https://github.com/apoelstra/rust-secp256k1"
-rev = "5602d6f98843d19de500d43d3556961579d59494"
+serde = "0.6.0"
+secp256k1 = "0.2.3"
