Switching to MessagePack for serialization and deserialization.

--- a/nodeA.conf
+++ b/nodeA.conf
@@ -1,5 +1,6 @@
 # Node A's configuration.
 
+ident_hostname = "virginia"
 log_config_filename = "log_virginia.toml"
 listener_port = 4000
 rpc_port = 4001
