--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ authors = ["Matt Quinn <matt@mattjquinn.com>"]
 [dependencies]
 hyper = "0.6.1"
 rust-crypto = "*"
-rustc-serialize = "0.3.15"
 getopts = "0.2"
 log = "0.3.1"
 log4rs = "0.3.3"
@@ -15,5 +14,6 @@ byteorder = "0.3.13"
 rand = "0.3.9"
 rust-base58 = "0.0.4"
 time = "0.1.32"
-serde = "0.6.0"
 secp256k1 = "0.2.3"
+rmp-serialize = "0.7.0"
+rustc-serialize = "0.3.16"
