--- a/log_stanford.toml
+++ b/log_stanford.toml
@@ -3,5 +3,5 @@ kind = "console"
 pattern = "[STANFORD] %l %d{%m/%d/%YT%H:%M:%S} - %m"
 
 [root]
-level = "info"
+level = "debug"
 appenders = ["stdout"]
