--- a/nodeB.conf
+++ b/nodeB.conf
@@ -1,5 +1,6 @@
 # Node B's configuration.
 
+ident_hostname = "stanford"
 log_config_filename = "log_stanford.toml"
 listener_port = 5000
 rpc_port = 5001
