--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ byteorder = "0.3.13"
 rand = "0.3.9"
 rust-base58 = "0.0.4"
 time = "0.1.32"
-secp256k1 = "0.2.3"
 rmp-serialize = "0.7.0"
 rustc-serialize = "0.3.16"
+
+# Using my local branch until my PR gets merged.
+[dependencies.secp256k1]
+git = "https://github.com/mquinn/rust-secp256k1.git"
+branch = "mquinn-recov-id"
