--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,14 @@ rust:
   - stable
   - beta
   - nightly
+
+install:
+- git clone https://github.com/bitcoin/secp256k1.git
+- cd secp256k1
+- ./autogen.sh
+- ./configure --enable-module-ecdh --enable-module-recovery
+- make
+- ./tests
+- sudo make install
+- sudo ldconfig /usr/local/lib
+- cd ..
