Moving conf files to subdirectory.

--- a/conf/nodeA.conf
+++ b/conf/nodeA.conf
@@ -1,7 +1,7 @@
 # Node A's configuration.
 
 hostname = "virginia"
-log_config_filename = "log_virginia.toml"
+log_config_filename = "conf/log_virginia.toml"
 port = 4000
 rpc_port = 4001
 
