--- a/conf/tokyo.conf
+++ b/conf/tokyo.conf
@@ -1,6 +1,6 @@
 # Tokyo University's configuration.
 
-log_config_filename = "log_tokyo.toml"
+log_config_filename = "conf/log_tokyo.toml"
 listener_hostname = "tokyo.certchain.org"
 listener_port = 4000
 rpc_port = 4001
