--- a/conf/ireland.conf
+++ b/conf/ireland.conf
@@ -1,6 +1,6 @@
 # University of Ireland's configuration.
 
-log_config_filename = "log_ireland.toml"
+log_config_filename = "conf/log_ireland.toml"
 listener_port = 4000
 rpc_port = 4001
 
