--- a/conf/nodeB.conf
+++ b/conf/nodeB.conf
@@ -1,7 +1,7 @@
 # Node B's configuration.
 
 hostname = "stanford"
-log_config_filename = "log_stanford.toml"
+log_config_filename = "conf/log_stanford.toml"
 port = 5000
 rpc_port = 5001
 
