--- a/conf/virginia.conf
+++ b/conf/virginia.conf
@@ -1,6 +1,6 @@
 # University of Virginia's configuration.
 
-log_config_filename = "log_virginia.toml"
+log_config_filename = "conf/log_virginia.toml"
 listener_port = 4000
 rpc_port = 4001
 
