--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ rmp-serialize = "0.7.0"
 rustc-serialize = "0.3.16"
 compress = "0.1.1"
 secp256k1 = "0.3.2"
+serde = "0.6.1"
+serde_json = "0.6.0"
+serde_macros = "0.6.0"
