--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "secp256k1"]
 	path = secp256k1
 	url = https://github.com/bitcoin/secp256k1.git
+[submodule "sjcl"]
+	path = sjcl
+	url = https://github.com/bitwiseshiftleft/sjcl.git
