Telling Cargo to link against secp256k1 at compile and run time, rather than managing all that via flags or ldconfig.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ emscripten/Makefile
 emscripten/libsecp256k1.js
 emscripten/secp256k1-build
 admin/public/static/public/js/libsecp256k1.js
+secp256k1_server_libs
