Adjusting configurations for both stanford and virginia.

--- a/conf/virginia.conf
+++ b/conf/virginia.conf
@@ -8,7 +8,7 @@ rpc_port = 4001
 # This is the directory in which non-versioned,
 # serialized representations of CertChain data structures
 # (i.e., node table, blockchain, replicas, etc.) are stored.
-data_dir = "data_dirs/virginia"
+data_dir = "data_dir"
 
 # The public key below corresponds
 # to an address of: cfmwvkv9WKALsFMxXyZxdAjhNGpcfXacsc
