Log at DEBUG on all nodes for now.

--- a/conf/log_ireland.toml
+++ b/conf/log_ireland.toml
@@ -3,5 +3,5 @@ kind = "console"
 pattern = "[IRELAND] %l %d{%m/%d/%YT%H:%M:%S} - %m"
 
 [root]
-level = "info"
+level = "debug"
 appenders = ["stdout"]
